--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@types/jest": "^27.0.1",
     "jest": "^27.0.6",
     "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-typescript": "^7.15.0",
-    "babel-jest": "^27.0.6",
-    "ts-node": "^10.2.1"
+    "babel-jest": "^27.0.6"
   }
 }
